feat(kafka): upgrade libs for kafka4

--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,6 +1,6 @@
 {
   "extension": ["ts"],
-  "spec": "test/**/*.spec.ts",
+  "spec": "test/**/microservice.spec.ts",
   "require": "ts-node/register",
   "node-option": [
     "experimental-specifier-resolution=node",
