--- a/package.json
+++ b/package.json
@@ -18,67 +18,66 @@
   ],
   "type": "module",
   "dependencies": {
-    "@restorecommerce/acs-client": "3.0.9",
-    "@restorecommerce/chassis-srv": "1.6.5",
-    "@restorecommerce/grpc-client": "2.2.5",
-    "@restorecommerce/kafka-client": "1.2.22",
-    "@restorecommerce/logger": "1.3.2",
-    "@restorecommerce/rc-grpc-clients": "5.1.44",
-    "@restorecommerce/resource-base-interface": "1.6.5",
-    "@restorecommerce/service-config": "1.0.16",
+    "@restorecommerce/acs-client": "^3.1.5",
+    "@restorecommerce/chassis-srv": "^1.7.7",
+    "@restorecommerce/grpc-client": "^2.2.13",
+    "@restorecommerce/kafka-client": "^1.3.5",
+    "@restorecommerce/logger": "^1.3.8",
+    "@restorecommerce/rc-grpc-clients": "^5.1.62",
+    "@restorecommerce/resource-base-interface": "^1.9.7",
+    "@restorecommerce/service-config": "^1.1.7",
     "apollo-boost": "^0.4.9",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
-    "cross-fetch": "^4.0.0",
+    "cross-fetch": "^4.1.0",
     "graphql-tag": "^2.12.6",
     "js-yaml": "^4.1.0",
-    "lodash-es": "^4.17.21",
-    "node-eval": "^2.0.0"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@alenon/grpc-mock-server": "3.1.16",
-    "@commitlint/cli": "19.6.0",
-    "@commitlint/config-conventional": "19.6.0",
-    "@grpc/proto-loader": "^0.7.12",
-    "@restorecommerce/dev": "0.0.13",
-    "@restorecommerce/protos": "6.10.3",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@grpc/proto-loader": "^0.7.15",
+    "@restorecommerce/dev": "^0.0.13",
+    "@restorecommerce/protos": "^6.11.10",
     "@semantic-release-plus/docker": "^3.1.3",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash-es": "^4.17.12",
-    "@types/mocha": "10.0.10",
-    "@types/nock": "11.1.0",
-    "@types/node": "22.9.1",
-    "c8": "^10.1.2",
+    "@types/mocha": "^10.0.10",
+    "@types/nconf": "^0.10.7",
+    "@types/nock": "^11.1.0",
+    "@types/node": "^22.18.11",
+    "c8": "^10.1.3",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "esbuild": "0.24.0",
-    "eslint": "9.15.0",
-    "typescript-eslint": "8.15.0",
-    "husky": "9.1.7",
-    "mocha": "11.0.0",
-    "nock": "13.5.6",
-    "nodemon": "3.1.7",
+    "esbuild": "^0.24.2",
+    "eslint": "^9.37.0",
+    "husky": "^9.1.7",
+    "mocha": "^11.7.4",
+    "nock": "^13.5.6",
+    "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
-    "rimraf": "6.0.1",
+    "rimraf": "^6.0.1",
     "should": "^13.2.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1"
   },
   "scripts": {
     "start": "node lib/start.cjs",
     "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec node --loader ts-node/esm ./src/start.ts",
-    "test": "npm run build && npm run lint && c8 --reporter=text npm run mocha",
+    "test": "npm run build && npm run test:mocha",
     "lint": "eslint src",
-    "mocha": "cross-env NODE_ENV=test mocha --full-trace --exit --timeout 120000",
-    "mocha-debug": "mocha -R spec test/*_test.js --inspect-brk",
-    "test-core": "cross-env NODE_ENV=test npm run lint && npm run mocha-core",
+    "test:mocha": "c8 --reporter=text cross-env NODE_ENV=test mocha --full-trace --exit --timeout 120000",
+    "test:mocha:debug": "mocha -R spec test/*_test.js --inspect-brk",
     "lcov-report": "c8 report --reporter=lcov",
     "coveralls": "c8 report --reporter=text-lcov | coveralls",
-    "tsctests": "tsc -d -p tsconfig.test.json",
-    "build:tsc": "esbuild ./src/start.ts --bundle --platform=node --outfile=lib/start.cjs --minify --tree-shaking=true --sourcemap=inline",
     "build:clean": "rimraf lib",
-    "build": "npm-run-all lint build:clean build:tsc",
+    "build:es": "esbuild ./src/start.ts --bundle --platform=node --outfile=lib/start.cjs --minify --tree-shaking=true --sourcemap=inline",
+    "build": "npm-run-all lint build:clean build:es",
     "prepare": "node -e \"try { require('husky').install() } catch (e) {}\""
   },
   "engines": {
