fix(test): set resourceName, fix test config, remove obsolete libs

--- a/cfg/config_development.json
+++ b/cfg/config_development.json
@@ -6,5 +6,10 @@
       "colorize": true,
       "prettyPrint": true
     }
+  },
+  "seed_data": {
+    "policy_set" : "./data/seed_data/policy_sets.yaml",
+    "policy": "./data/seed_data/policies.yaml",
+    "rule": "./data/seed_data/rules.yaml"
   }
 }
