--- a/cfg/config_production.json
+++ b/cfg/config_production.json
@@ -58,5 +58,10 @@
     "user": {
       "address": "identity-srv:50051"
     }
+  },
+  "seed_data": {
+    "policy_set" : "./data/seed_data/policy_sets.yaml",
+    "policy": "./data/seed_data/policies.yaml",
+    "rule": "./data/seed_data/rules.yaml"
   }
 }
