--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@alenon/grpc-mock-server": "3.1.16",
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "@grpc/proto-loader": "^0.7.15",
-    "@restorecommerce/dev": "^0.0.13",
+    "@alenon/grpc-mock-server": "3.2.3",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
+    "@grpc/proto-loader": "^0.8.0",
+    "@restorecommerce/dev": "^0.2.0",
     "@restorecommerce/protos": "^6.11.10",
     "@semantic-release-plus/docker": "^3.1.3",
     "@types/js-yaml": "^4.0.9",
@@ -48,23 +48,23 @@
     "@types/mocha": "^10.0.10",
     "@types/nconf": "^0.10.7",
     "@types/nock": "^11.1.0",
-    "@types/node": "^22.18.11",
+    "@types/node": "^24.9.1",
     "c8": "^10.1.3",
     "coveralls": "^3.1.1",
-    "cross-env": "^7.0.3",
+    "cross-env": "^10.1.0",
     "cz-conventional-changelog": "^3.3.0",
-    "esbuild": "^0.24.2",
-    "eslint": "^9.37.0",
+    "esbuild": "^0.25.11",
+    "eslint": "^9.38.0",
     "husky": "^9.1.7",
     "mocha": "^11.7.4",
-    "nock": "^13.5.6",
+    "nock": "^14.0.10",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "should": "^13.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.1"
+    "typescript-eslint": "^8.46.2"
   },
   "scripts": {
     "start": "node lib/start.cjs",
@@ -76,7 +76,7 @@
     "lcov-report": "c8 report --reporter=lcov",
     "coveralls": "c8 report --reporter=text-lcov | coveralls",
     "build:clean": "rimraf lib",
-    "build:es": "esbuild ./src/start.ts --bundle --platform=node --outfile=lib/start.cjs --minify --tree-shaking=true --sourcemap=inline",
+    "build:es": "node esbuild.mjs",
     "build": "npm-run-all lint build:clean build:es",
     "prepare": "node -e \"try { require('husky').install() } catch (e) {}\""
   },
