--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@semantic-release-plus/docker": "^3.1.3",
     "@types/js-yaml": "^4.0.9",
     "@types/lodash-es": "^4.17.12",
-    "@types/mocha": "^10.0.10",
+    "@vitest/coverage-v8": "^3.2.4",
     "@types/nconf": "^0.10.7",
     "@types/nock": "^11.1.0",
     "@types/node": "^24.9.1",
@@ -56,7 +56,6 @@
     "esbuild": "^0.25.11",
     "eslint": "^9.38.0",
     "husky": "^9.1.7",
-    "mocha": "^11.7.4",
     "nock": "^14.0.10",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
@@ -64,16 +63,14 @@
     "should": "^13.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.2"
+    "typescript-eslint": "^8.46.2",
+    "vitest": "^3.2.4"
   },
   "scripts": {
     "start": "node lib/start.cjs",
     "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec node --loader ts-node/esm ./src/start.ts",
-    "test": "npm run build && npm run test:mocha",
+    "test": "npm run build && vitest run",
     "lint": "eslint src",
-    "test:mocha": "c8 --reporter=text cross-env NODE_ENV=test mocha --full-trace --exit --timeout 120000",
-    "test:mocha:debug": "mocha -R spec test/*_test.js --inspect-brk",
-    "lcov-report": "c8 report --reporter=lcov",
     "coveralls": "c8 report --reporter=text-lcov | coveralls",
     "build:clean": "rimraf lib",
     "build:es": "node esbuild.mjs",
